src/styles/layout.scss
/* ... */
html {
  /* font: 400 15px/1.8 "Open Sans", Verdana, sans-serif; */
  font-family: "Archivo", sans-serif;
  box-sizing: border-box;
  overflow-y: scroll;
}
* {
  box-sizing: inherit;
}
*:before {
  box-sizing: inherit;
}
*:after {
  box-sizing: inherit;
}
body {
  color: hsla(0, 0%, 0%, 0.8);
  /* font-family: georgia, serif; */
  font-family: "Archivo", sans-serif;
  font-weight: normal;
  word-wrap: break-word;
  font-kerning: normal;
  -moz-font-feature-settings: "kern", "liga", "clig", "calt";
  -ms-font-feature-settings: "kern", "liga", "clig", "calt";
  -webkit-font-feature-settings: "kern", "liga", "clig", "calt";
  font-feature-settings: "kern", "liga", "clig", "calt";
}
img {
  max-width: 100%;
  margin-left: 0;
  margin-right: 0;
  margin-top: 0;
  padding-bottom: 0;
  padding-left: 0;
  padding-right: 0;
  padding-top: 0;
}
h1 {
  margin-left: 0;
  margin-right: 0;
  margin-top: 0;
  padding-bottom: 0;
  padding-left: 0;
  padding-right: 0;
  padding-top: 0;
  margin-bottom: 1.45rem;
  color: #487783;
  /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
  font-family: "Archivo", sans-serif;
  font-weight: bold;
  text-rendering: optimizeLegibility;
  font-size: 2.25rem;
  line-height: 1.1;
}
h2 {
  font-family: "Archivo", sans-serif;
  font-weight: 500;
  text-rendering: optimizeLegibility;
  font-size: 1.62671rem;
  line-height: 1.1;
  margin: 50px 0 25px 0;
  color: var(--blue) ;
}
h3 {
  margin-left: 0;
  margin-right: 0;
  margin-top: 0;
  padding-bottom: 0;
  padding-left: 0;
  padding-right: 0;
  padding-top: 0;
  margin-bottom: 1.45rem;
  color: #2d2d2f;
  /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
  font-family: "Archivo", sans-serif;
  font-weight: bold;
  text-rendering: optimizeLegibility;
  font-size: 1.38316rem;
  line-height: 1.1;
}
h4 {
  margin-left: 0;
  margin-right: 0;
  margin-top: 0;
  padding-bottom: 0;
  padding-left: 0;
  padding-right: 0;
  padding-top: 0;
  // margin-bottom: 1.45rem;
  color: var(--blue) ;
  /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
  font-family: "Archivo", sans-serif;
  font-weight: bold;
  text-rendering: optimizeLegibility;
  font-size: 1rem;
  line-height: 1.1;
}
h5 {
  margin-left: 0;
  margin-right: 0;
  margin-top: 0;
  padding-bottom: 0;
  padding-left: 0;
  padding-right: 0;
  padding-top: 0;
  margin-bottom: 1.45rem;
  color: var(--blue) ;
  /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
  font-family: "Archivo", sans-serif;
  font-weight: bold;
  text-rendering: optimizeLegibility;
  font-size: 0.85028rem;
  line-height: 1.1;
}
h6 {
  margin-left: 0;
  margin-right: 0;
  margin-top: 0;
  padding-bottom: 0;
  padding-left: 0;
  padding-right: 0;
  padding-top: 0;
  margin-bottom: 1.45rem;
  color: var(--blue) ;
  /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
  font-family: "Archivo", sans-serif;
  font-weight: bold;
  text-rendering: optimizeLegibility;
  font-size: 0.78405rem;
  line-height: 1.1;
}
// ul {
//   margin-left: 1.45rem;
//   margin-right: 0;
//   margin-top: 0;
//   padding-bottom: 0;
//   padding-left: 0;
//   padding-right: 0;
//   padding-top: 0;
//   margin-bottom: 1.45rem;
//   // list-style-position: outside;
//   list-style-image: none;
// }
p {
  margin-left: 0;
  margin-right: 0;
  margin-top: 0;
  padding-bottom: 0;
  padding-left: 0;
  padding-right: 0;
  padding-top: 0;
  margin-bottom: 1.45rem;
}
pre {
  margin-left: 0;
  margin-right: 0;
  margin-top: 0;
  margin-bottom: 1.45rem;
  font-size: 0.85rem;
  line-height: 1.5;
  background: hsla(0, 0%, 0%, 0.04);
  border-radius: 3px;
  overflow: auto;
  word-wrap: normal;
  padding: 1.5rem;
}

/* Reactime 14.0 CSS Edits */
// NavBar
.navBarContainer {
  z-index: 5;
  position: fixed;
  background-color: white;
  height: 4rem;
  width: 100vw;
  padding: 0 1.5rem;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  border-bottom: 1px solid rgb(225, 225, 225);
  top: 0;
}
.name {
  padding-top: 1.5rem;
  font-size: 2rem;
  font-weight: 500;
}
.navBarLeft {
  font-family: "Archivo";
  text-decoration: none;
}
.navBarRight {
  gap: .5rem;
  display: flex;
  flex-direction: row;
  align-items: center;
}
.navBarLeft:hover {
  opacity: 0.75;
}
.github span {
  gap: 5px;
}
.github div {
  display: flex;
  align-items: center;
}
// "Splash"
.splash-container {
  display: flex;
  flex-direction: column;
  text-align: center;
  align-items: center;
  padding: 1rem;
  flex: 1;
  padding-bottom: 3em;
  padding-left: 15em;
  padding-right: 15em;
}
.splash-header{
  padding-left:5em;
  padding-right:5em;
  text-align: center;
}
.main-h1 {
  font-size: 2.5em;
  color: #2d2d2f;
  text-align: center;
  // color: #62D6FB;
}
.reactime-h1 {
  color: #2d2d2f;
}
.splash-info {
  text-align: center;
}
.splash-logo {
  display: flex;
  align-items: center;
  flex-direction: column;
  padding-bottom: 4em;
  margin: auto;
}
// DescriptionContainer
#home-features {
  display: flex;
  flex-direction: row;
  justify-content: center;
  gap: 2rem;
  flex-wrap: wrap;
  flex: 1 0;
  padding-top: 5em;
  padding-bottom: 4em;
  padding-left: 15em;
  padding-right: 15em;
}
#feature-1 {
  display: flex;
  flex-direction: column;
  text-align: center;
  align-items: center;
  padding: 1rem;
  flex: 1;
}
.first-icon {
  font-size: 100px !important;
  margin-bottom: 30px;
  width: 1em;
}
.second-icon {
  font-size: 100px !important;
  margin-bottom: 30px;
  width: 1em;
}
/* ... */

